fixed git bug and added starting time for shifts

--- a/react-project/src/MainContent/CalenderPage/CalenderPage.css
+++ b/react-project/src/MainContent/CalenderPage/CalenderPage.css
@@ -14,7 +14,6 @@
 .Hours{
   height: 30px;
   border-top: solid 1px LightGray;
-  text-align: left;
 }
 
 
